--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 * {
   box-sizing: border-box;
 }
 html {
   font-family: 'Courgette', cursive;
-}
-body {
+} */
+*{
   margin: 0%;
   padding: 0%;
 }
