--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -2,7 +2,8 @@
     padding: 0%;
     margin: 0%;
     font-family: 'Lexend Mega', sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 5px;
+    font-weight: 500;
 }
 nav{
     display: flex;
@@ -66,13 +67,25 @@ nav button:focus{
     margin-right: 12%;
     height: fit-content;
     width: fit-content;
+    z-index: 0;
+}
+.Cart:hover{
+    cursor: pointer;
 }
 nav i{
     width: fit-content;
-    margin-left: 65%;
+    margin-left: 63%;
     float: right;
-    left: 31px;
+    left: 43px;
     top: -7px;
     position: relative;
+    height: 18px;
+    padding-left: 3px;
+    padding-right: 0px;
     background-color: orange;
+    font-size: 15px;
+    border-radius: 5px;
+    color: white;
+    width: fit-content;
+    z-index: 1;
 }
