--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 * {
   box-sizing: border-box;
-}
-html {
-  font-family: 'Courgette', cursive;
-} */
+}*/
 *{
   margin: 0%;
   padding: 0%;
+}
+html {
+  font-family: 'Courgette', cursive;
+  scroll-behavior: smooth;
 }
